objects/Cadence_Online_Service_Log__c.object
<CustomObject>
    <description>This Object will be a child object of Contact. While users try to register themselves to an application multiple web-service callouts will take place. This object will store any callout exception. SFDC admin will be able to process those pending actions. Also it will capture login detail and scheduler error log.</description>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <label>Error Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Login_IP_address__c</fullName>
        <label>Login IP address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Status__c</fullName>
        <label>Operation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operation_Time__c</fullName>
        <label>Operation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Process_Detail__c</fullName>
        <label>Process Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cadence Online Service Logs</relationshipLabel>
        <relationshipName>Cadence_Online_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WebService_Callout_Request_Body__c</fullName>
        <label>WebService Callout Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WebService_Callout_Request_Header__c</fullName>
        <label>WebService Callout Request Header</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WebService_Callout_Request__c</fullName>
        <label>WebService Callout Request</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Webservice_Callout_Method__c</fullName>
        <label>Webservice Callout Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webservice_Callout_Request_Header1_Name__c</fullName>
        <label>Webservice Callout Request Header1 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webservice_Callout_Request_Header1_Value__c</fullName>
        <label>Webservice Callout Request Header1 Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webservice_Callout_Request_Header2_Name__c</fullName>
        <label>Webservice Callout Request Header2 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webservice_Callout_Request_Header2_Value__c</fullName>
        <label>Webservice Callout Request Header2 Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Cadence Online Service Log</label>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadence Online Service Logs</pluralLabel>
    <recordTypes>
        <fullName>Batch</fullName>
        <active>true</active>
        <description>Batch Process</description>
        <label>Batch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Login</fullName>
        <active>true</active>
        <description>Cadence User Login</description>
        <label>Login</label>
    </recordTypes>
    <recordTypes>
        <fullName>Registration</fullName>
        <active>true</active>
        <description>Cadence User Registration</description>
        <label>Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scheduler</fullName>
        <active>true</active>
        <description>Scheduler</description>
        <label>Scheduler</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>